# homeops-ai

./: .containerignore  .gitignore  Containerfile  README.md  pyproject.toml
.github/workflows/: container.yml
deploy/nixos-host/: sync-snapshot.sh
evaluation/: context-compiler-v1.yaml  deterministic-homeops-v1.yaml
scripts/: check-public-artifact.sh
src/homeops_ai/: __init__.py  build.py  cli.py  context_compiler.py  database.py  evaluation.py  frontmatter.py  loader.py  markdown_parser.py  mcp_server.py  migration.py  models.py  query.py  schema.py  source_contract.py  verifier.py
tests/: test_build.py  test_database.py  test_loader.py  test_markdown_parser.py  test_mcp_server.py  test_migration.py  test_query_evaluation.py  test_source_contract.py
